Fix header size not showing on correct slides and tweak css

--- a/src/components/boards/Board.css
+++ b/src/components/boards/Board.css
@@ -248,7 +248,7 @@
 
 .passing-device h3 {
   font-size: 2.0rem;
-  color: rgb(0, 0, 0);
+  color: #222;
   margin-bottom: 20px;
   animation: 2s ease-in-out 0s infinite alternate-reverse forwards flashSlowly;
 }
@@ -256,6 +256,7 @@
 button.pass-device {
   margin: 15px 0 0 0;
   animation-name: flashBorder;
+  animation-delay: 2s;
   animation-duration: .5s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse;
@@ -269,7 +270,7 @@ button.pass-device {
   }
 
   100% {
-    color: rgb(0, 0, 0);
+    color: #222;
   }
 }
 
